<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_sign_up"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="visible">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_mobile"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/hint_mobile"
            android:inputType="number"
            android:maxLength="10"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/txt_18"
            app:errorEnabled="true" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkbox_tc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/tAndC"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/txt_tandc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tAndC2"
            android:textColor="@color/colorTexttBlue" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_sign_up_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary"
        android:text="Submit"
        android:textColor="@color/colorWhite" />

</LinearLayout>





