<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:weightSum="5">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightBlue"
        android:padding="@dimen/mainPadding">

        <ImageView
            android:id="@+id/img_sign_up_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@mipmap/icons_back"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/txt_health"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Health"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/txt_25"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/txt_litmus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right|top"
            android:text="Litmus"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/txt_20"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_health" />

        <TextView
            android:id="@+id/txt_sign_up_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/login"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/txt_20"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/txt_litmus" />

        <TextView
            android:id="@+id/txt_sign_up_subheader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:textSize="@dimen/txt_12"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/txt_sign_up_header" />

    </android.support.constraint.ConstraintLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="@dimen/mainPadding">


    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="@dimen/mainPadding"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/layout_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/hint_mobile"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/txt_18"
                    app:errorEnabled="true" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox_tc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/tAndC"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:id="@+id/txt_tandc2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tAndC2"
                    android:textColor="@color/colorTexttBlue" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_sign_up_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/colorPrimary"
                android:text="Submit"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_otp"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginBottom="0dp"
                    android:hint="@string/hint_password_otp"
                    android:inputType="number"
                    android:maxLength="6"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/txt_18"
                    app:errorEnabled="true" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/txt_resend_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingBottom="10dp"
                android:text="@string/resend_OTP"
                android:textColor="@color/colorTxtGrey"
                android:textSize="@dimen/txt_12" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:visibility="gone">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginBottom="0dp"
                    android:hint="@string/hint_password"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/txt_18"
                    app:errorEnabled="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_OTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/colorPrimary"
                android:text="Log in"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/txt_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/forgot_password"
                android:textColor="@color/colorTxtGrey"
                android:textSize="@dimen/txt_18" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
